--- a/appui/src/index.css
+++ b/appui/src/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Anton|K2D|Roboto');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  background: #030202;
+  font-family: 'K2D', sans-serif;
 }
